--- a/index.ipynb
+++ b/index.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Introduction</a></span></li><li><span><a href=\"#Objectives\" data-toc-modified-id=\"Objectives-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Objectives</a></span></li><li><span><a href=\"#Import-NumPy-under-the-standard-alias\" data-toc-modified-id=\"Import-NumPy-under-the-standard-alias-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Import NumPy under the standard alias</a></span></li><li><span><a href=\"#Generating-Some-Mock-Data\" data-toc-modified-id=\"Generating-Some-Mock-Data-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Generating Some Mock Data</a></span></li><li><span><a href=\"#Create-an-identity-vector-using-np.ones()\" data-toc-modified-id=\"Create-an-identity-vector-using-np.ones()-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Create an identity vector using np.ones()</a></span></li><li><span><a href=\"#Multiply-the-BMI_array-by-your-identity-vector\" data-toc-modified-id=\"Multiply-the-BMI_array-by-your-identity-vector-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Multiply the BMI_array by your identity vector</a></span></li><li><span><a href=\"#Level-Up:-Using-NumPy-to-Parse-a-File\" data-toc-modified-id=\"Level-Up:-Using-NumPy-to-Parse-a-File-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>Level Up: Using NumPy to Parse a File</a></span></li><li><span><a href=\"#Summary\" data-toc-modified-id=\"Summary-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Summary</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Getting Started with NumPy - Lab"
@@ -45,12 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -77,13 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "py_list = list(range(5))\n",
+    "py_range = range(5)\n",
+    "array_from_list = np.array(py_list)\n",
+    "array_from_range = np.full(5, py_range)"
    ]
   },
   {
@@ -108,30 +119,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.651 , 1.7272, 1.8542, 1.905 , 1.9812])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
-    "#Your code here"
+    "#Your code here\n",
+    "list_height_metres = np.array(list_height_inches)*0.0254\n",
+    "#list_height_metres = list(list_height_metres)\n",
+    "list_height_metres"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 68.03955366,  63.50358342,  99.79134537,  92.98739   ,\n",
+       "       120.20321147])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
-    "#your code here"
+    "#your code here\n",
+    "list_weight_kilo = np.array(list_weight_pounds)/2.2046\n",
+    "list_weight_kilo\n"
    ]
   },
   {
@@ -151,13 +186,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "list_bmi = list_weight_kilo / (list_height_metres**2)\n",
+    "list_bmi"
    ]
   },
   {
@@ -169,13 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "ident_vector = np.ones(len(list_bmi))"
    ]
   },
   {
@@ -187,13 +232,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "list_bmi*ident_vector"
    ]
   },
   {
@@ -206,11 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file has 21 lines.\n"
+     ]
+    }
+   ],
    "source": [
     "#Open a text file (csv files are just plaintext seperated by commas)\n",
     "f = open('bp.txt')\n",
@@ -219,10 +280,11 @@
     "f = open('bp.txt') #After using readlines, we must reopen the file\n",
     "n_cols = (len(f.readline().split('\\t'))) #The file has values seperated by tabs; we read the first line and check it's length.\n",
     "\n",
-    "f = open('bp.txt')\n",
+    "f.close()\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
+    "\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
@@ -247,9 +309,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -261,7 +323,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
